[gd_scene load_steps=2 format=3 uid="uid://b8tf32sp0o253"]

[ext_resource type="Script" path="res://addons/asset_dock/gui_elements/create_collection_dialog.gd" id="1_4y3mi"]

[node name="CreateCollectionDialog" type="ConfirmationDialog"]
title = "Name Of Collection"
size = Vector2i(400, 200)
visible = true
ok_button_text = "Create Collection"
script = ExtResource("1_4y3mi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 151.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name Of Collection"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
